deployment/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"

spec:
  rules:
    - host: argocd.albertoclarit.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
